Corrected URL in vignette, added grid to depends in NAMESPACE to try and fix the convertunit issue.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@81601 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/interactiveDisplay.Rmd
+++ b/vignettes/interactiveDisplay.Rmd
@@ -28,7 +28,7 @@ suppressWarnings(suppressPackageStartupMessages(library(interactiveDisplay)))
 
 # interactiveDisplay
 
-[interactiveDisplay](http://bioconductor.org/)
+[interactiveDisplay](http://bioconductor.org/packages/2.13/bioc/html/interactiveDisplay.html)
 
 `interactiveDisplay` uses the function `display()` to host a browser based application 
 on the fly using the Shiny package.  Currently 4 bioconductor objects: Granges, GrangesList, ExpressionSet 
