--- a/vignettes/interactiveDisplay.Rmd
+++ b/vignettes/interactiveDisplay.Rmd
@@ -105,12 +105,11 @@ John Krauss <br/>
 https://github.com/talos/jquery-svgpan <br/>
 Andrea Leofreddi <br/>
 https://code.google.com/p/svgpan/ <br/>
-  
+
 JavaScript Color Chooser <br/>
-Jan Odvárko <br/>
+Jan Odvarko <br/>
 http://jscolor.com/ <br/>
 
 Data-Driven Documents <br/>
 Michael Bostock <br/>
 http://d3js.org/ <br/>
-
