updates to acknowledgements
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@84077 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/interactiveDisplay.Rmd
+++ b/vignettes/interactiveDisplay.Rmd
@@ -113,3 +113,9 @@ http://jscolor.com/ <br/>
 Data-Driven Documents <br/>
 Michael Bostock <br/>
 http://d3js.org/ <br/>
+
+Javascript for returning values from data.frames <br/>
+Kirill Savin <br/> 
+
+Help with the display method for data.frames <br/>
+Dan Tenenbaum <br/>
