Added a little function gridtweak().  It may be removed later, but I personally find it convenient.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@89384 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/interactiveDisplay.Rmd
+++ b/vignettes/interactiveDisplay.Rmd
@@ -108,6 +108,13 @@ data(expr)
 bicgo(expr)
 ```
 
+An alternative to gridsvgjs() that allows the user to tweak ggplot 
+parameters within the browser application itself.
+
+```{r gridtweak_demo, eval=FALSE}
+gridtweak()
+```
+
 ## Acknowledgments
 
 Shiny <br/>
