--- a/vignettes/interactiveDisplay.Rmd
+++ b/vignettes/interactiveDisplay.Rmd
@@ -115,6 +115,12 @@ parameters within the browser application itself.
 gridtweak()
 ```
 
+A pared-down, stand-alone force network shiny app for any dataframe.
+
+```{r simplenet_demo, eval=FALSE}
+simplenet(mtcars)
+```
+
 ## Acknowledgments
 
 Shiny <br/>
