add VignetteEngine and VignetteIndexEntry to comment block at top
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@93817 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/interactiveDisplay.Rnw
+++ b/vignettes/interactiveDisplay.Rnw
@@ -1,3 +1,8 @@
+<!--
+%\VignetteEngine{knitr::knitr}
+%\VignetteIndexEntry{interactiveDisplay: A package for enabling interactive visualization of Bioconductor objects
+}
+-->
 \documentclass{article}
 \usepackage{url}
 \usepackage{cite, graphicx, Bioconductor}
