tidying from last commit
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/interactiveDisplay@93818 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/interactiveDisplay.Rnw
+++ b/vignettes/interactiveDisplay.Rnw
@@ -1,7 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{interactiveDisplay: A package for enabling interactive visualization of Bioconductor objects
-}
+%\VignetteIndexEntry{interactiveDisplay: A package for enabling interactive visualization of Bioconductor objects}
 -->
 \documentclass{article}
 \usepackage{url}
