--- a/vignettes/interactiveDisplay.Rnw
+++ b/vignettes/interactiveDisplay.Rnw
@@ -1,7 +1,6 @@
-<!--
 %\VignetteEngine{knitr::knitr}
 %\VignetteIndexEntry{interactiveDisplay: A package for enabling interactive visualization of Bioconductor objects}
--->
+
 \documentclass{article}
 \usepackage{url}
 \usepackage{cite, graphicx, Bioconductor}
@@ -31,6 +30,7 @@
 %\SweaveOpts{concordance=TRUE}
 
 <<include=FALSE>>=
+library(knitr)
 opts_chunk$set(concordance=TRUE)
 @
 
